# ext2driver

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  LICENSE  Makefile  README.md  flake.nix
src/: config.hpp.in  driver.cpp  filesystem.cpp  filesystem.hpp  helpers.hpp  inode.cpp  inode.hpp
tests/: generate_filesystem.py  read.test.cpp
